Fixed some annoying issues with tablet devices (e.g. zooming in when too close to two buttons)

--- a/client/css/stylus/main.styl
+++ b/client/css/stylus/main.styl
@@ -7,6 +7,10 @@
 
 $font-list = "Helvetica Neue","Hevletica","Arial","DejaVu Sans","Kozuka Gothic Pro R","Meiryo","MS Gothic","Osaka",sans-serif
 
+*
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+
 html, body
   height: 100%;
   font-family: $font-list
